kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fiddle-rabbitmq-trial
  labels:
    name: fiddle-rabbitmq-trial
spec:
  containers:
    - image: launcher.gcr.io/google/rabbitmq3
      name: rabbitmq
      volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
  volumes:
    - name: rabbitmq-data
      persistentVolumeClaim:
        claimName: rabbitmq-data
