kubernetes/slide_service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
  creationTimestamp: 2018-06-12T16:20:59Z
  generation: 5
  labels:
    run: slide-service
  name: slide-service
  namespace: default
  resourceVersion: "887698"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/slide-service
  uid: 97669ebe-6e5c-11e8-af7e-42010a800156
spec:
  replicas: 1
  selector:
    matchLabels:
      run: slide-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: slide-service
    spec:
      containers:
      - env:
        - name: rabbitmq
          value: amqp://10-24-0-13.default.pod.cluster.local
        image: gcr.io/kubernetes-fiddle-trial/slide_service:v4
        imagePullPolicy: IfNotPresent
        name: slide-service
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-06-12T16:20:59Z
    lastUpdateTime: 2018-06-12T16:20:59Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
